--- a/app/index.html
+++ b/app/index.html
@@ -24,46 +24,89 @@
     <![endif]-->
     <div class="container">
       <div class="header">
-        <ul class="nav nav-pills float-right">
-          <li class="nav-item">
-            <a href="#" class="nav-link active">Home</a>
-          </li>
-          <li>
-            <a href="#" class="nav-link">About</a>
-          </li>
-          <li>
-            <a href="#" class="nav-link">Contact</a>
-          </li>
-        </ul>
         <h3 class="text-muted">webcamp prototyp</h3>
       </div>
-
-      <div class="jumbotron">
-        <h1 class="display-3">'Allo, 'Allo!</h1>
-        <p class="lead">Always a pleasure scaffolding your apps.</p>
-        <p><a class="btn btn-lg btn-success" href="#">Splendid!</a></p>
-      </div>
-
       <div class="row marketing">
-        <div class="col-lg-6">
-          <h4>HTML5 Boilerplate</h4>
-          <p>HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.</p>
+        <div class="col-lg-8">
+      <div id="screenshot" style="text-align:center;">
+        <div class="jumbotron">
+          <video class="videostream" autoplay=""></video>
+        </div>
+        <div class="jumbotron">
+        <img id="screenshot-img">
+        </div>
+        <div class="btn-container">
+        <p><button class="btn btn-dark capture-button ">Capture video</button>
+        </p><p><button class="btn btn-dark" id="screenshot-button" disabled="">Take screenshot</button></p>
+        <p><button class="btn btn-dark upload-button" disabled="">Upload</button></p>
+        </div>
+      </div>
+        </div>
+        <div class="col-lg-4">
+          <h4 class="text-muted">Console</h4>
+          <div class="jumbotron text-align-left">
+            <pre id="logger"></pre>
+        </div>
 
-          <h4>Sass</h4>
-          <p>Sass is the most mature, stable, and powerful professional grade CSS extension language in the world.</p>
-
-          <h4>Bootstrap</h4>
-          <p>Sleek, intuitive, and powerful mobile first front-end framework for faster and easier web development.</p>
-
-          <h4>Modernizr</h4>
-          <p>Modernizr is an open-source JavaScript library that helps you build the next generation of HTML5 and CSS3-powered websites.</p>
         </div>
       </div>
 
+      <div class="row marketing">
+
+      </div>
+
       <div class="footer">
-        <p>♥ from the Yeoman team</p>
       </div>
     </div>
+
+    <script>
+
+
+      const captureVideoButton =
+        document.querySelector('#screenshot .capture-button');
+      const uploadButton =
+        document.querySelector('#screenshot .upload-button');
+      const screenshotButton = document.querySelector('#screenshot-button');
+      const img = document.querySelector('#screenshot img');
+      const video = document.querySelector('#screenshot video');
+
+      const canvas = document.createElement('canvas');
+
+      captureVideoButton.onclick = function() {
+        navigator.mediaDevices.getUserMedia(constraints).
+          then(handleSuccess).catch(handleError);
+        console.log(constraints)
+      };
+
+      screenshotButton.onclick = video.onclick = function() {
+        canvas.width = video.videoWidth;
+        canvas.height = video.videoHeight;
+        canvas.getContext('2d').drawImage(video, 0, 0);
+        // Other browsers will fall back to image/png
+        img.src = canvas.toDataURL('image/webp');
+        uploadButton.disabled = false;
+        console.log('Success!')
+
+      };
+
+      function handleSuccess(stream) {
+        screenshotButton.disabled = false;
+        video.srcObject = stream;
+      }
+
+      const constraints = {
+        video: true
+      };
+
+      function handleError(error) {
+        console.error('Error: ', error);
+      }
+
+
+      navigator.mediaDevices.getUserMedia(constraints).
+        then((stream) => {video.srcObject = stream});
+    </script>
+
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
       (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
