--- a/app/index.html
+++ b/app/index.html
@@ -95,8 +95,8 @@
       const screenshotButton = document.querySelector('#screenshot-button');
       const img = document.querySelector('#screenshot img');
       const video = document.querySelector('#screenshot video');
-
       const canvas = document.createElement('canvas');
+      const uploadBtn = document.querySelector('#upload-btn');
 
       captureVideoButton.onclick = function() {
         navigator.mediaDevices.getUserMedia(constraints).
@@ -116,8 +116,11 @@
       };
 
       function handleSuccess(stream) {
+        console.log('enabling screenshot button')
         screenshotButton.disabled = false;
+        console.log('setting video src')
         video.srcObject = stream;
+
       }
 
       const constraints = {
@@ -128,9 +131,10 @@
         console.error('Error: ', error);
       }
 
-
+      /*
       navigator.mediaDevices.getUserMedia(constraints).
         then((stream) => {video.srcObject = stream});
+        */
 
         // file reader
 
