--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="description" content="">
+    <meta name="robots" content="noindex, nofollow">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>webcamp prototyp</title>
@@ -27,54 +28,16 @@
     <div class="container">
 
       <!-- header -->
-      <div class="header d-none d-lg-block">
-        <h3 class="text-muted">Webcam</h3>
-      </div>
-      <div class="header d-lg-none">
-        <h3 class="text-muted">Mobile</h3>
+      <div class="header">
+        <h3 class="text-muted">MVP Webcam access</h3>
       </div>
 
       <!-- row -->
+      <!-- row -->
       <div id="step-1" class="row marketing">
         <div class="col-lg-8">
-
-          <!-- cam screenshot -->
-          <div id="screenshot" style="text-align:center;" class="d-none d-lg-block">
-            <div class="jumbotron">
-              <video class="videostream" autoplay=""></video>
-            </div>
-            <div class="jumbotron"><img id="screenshot-img"></div>
-            <div class="btn-container">
-              <p><button class="btn btn-dark capture-button ">Capture video</button></p>
-              <p><button class="btn btn-dark" id="screenshot-button" disabled="">Take screenshot</button></p>
-              <p><button id="upload-btn" class="btn btn-dark upload-button d-none" onclick="proceed();">Upload</button></p>
-            </div>
-          </div>
-
-          <!-- mobile upload -->
-          <div class="header d-lg-none">
-            <p><input id="mobile-input" class="btn btn-dark " type="file" accept="image/*"></p>
-            <p><img id="mobile-input-img" src="#" class="d-none"/></p>
-            <p><button id="mobile-upload-btn" class="btn btn-dark upload-button d-none" onclick="proceed();">Upload</button></p>
-          </div>
-
-        </div>
-
-        <!-- console -->
-        <div class="col-lg-4">
-          <h4 class="text-muted">Console</h4>
-          <div class="jumbotron text-align-left">
-            <pre id="logger"></pre>
-          </div>
-        </div>
-        <!-- /console -->
-
-      </div>
-
-      <div id="step-2" class="row marketing d-none">
-        <div class="col-lg-8">
-          <p>Modify image and start rendering...</p>
-          <p><button id="restart" class="btn btn-dark" onclick="window.location.reload();">Restart Process</button></p>
+          <p><button class="btn btn-dark" onclick="window.location.href='index2.html'">HTML Version</button></p>
+          <p><button class="btn btn-dark" disabled onclick="window.location.href=flash.html">Flash Version</button></p>
         </div>
       </div>
 
@@ -83,96 +46,7 @@
 
     </div>
 
-    <!-- insite script -->
-    <script>
 
-      const captureVideoButton =
-        document.querySelector('#screenshot .capture-button');
-      /*
-      const uploadButton =
-        document.querySelector('#screenshot .upload-button');
-        */
-      const screenshotButton = document.querySelector('#screenshot-button');
-      const img = document.querySelector('#screenshot img');
-      const video = document.querySelector('#screenshot video');
-      const canvas = document.createElement('canvas');
-      const uploadBtn = document.querySelector('#upload-btn');
-
-      captureVideoButton.onclick = function() {
-        navigator.mediaDevices.getUserMedia(constraints).
-          then(handleSuccess).catch(handleError);
-        console.log(constraints)
-      };
-
-      screenshotButton.onclick = video.onclick = function() {
-        canvas.width = video.videoWidth;
-        canvas.height = video.videoHeight;
-        canvas.getContext('2d').drawImage(video, 0, 0);
-        // Other browsers will fall back to image/png
-        img.src = canvas.toDataURL('image/webp');
-        uploadBtn.classList.remove('d-none');
-        console.log('Success!')
-
-      };
-
-      function handleSuccess(stream) {
-        console.log('enabling screenshot button')
-        screenshotButton.disabled = false;
-        console.log('setting video src')
-        video.srcObject = stream;
-
-      }
-
-      const constraints = {
-        video: true
-      };
-
-      function handleError(error) {
-        console.error('Error: ', error);
-      }
-
-      /*
-      navigator.mediaDevices.getUserMedia(constraints).
-        then((stream) => {video.srcObject = stream});
-        */
-
-        // file reader
-
-        const mobileInput = document.querySelector("#mobile-input");
-        const mobileInputImg = document.querySelector('#mobile-input-img');
-        const mobileUploadBtn = document.querySelector('#mobile-upload-btn');
-
-        function readURL(input) {
-            console.log('trying to read uploaded img...');
-            if (input.files && input.files[0]) {
-                var reader = new FileReader();
-                console.log('   reader created');
-                reader.onload = function (e) {
-                  console.log('   setting source');
-                  mobileInputImg.src = e.target.result;
-                  mobileInputImg.classList.remove('d-none');
-                  mobileUploadBtn.classList.remove('d-none');
-                }
-                reader.readAsDataURL(input.files[0]);
-            } else {
-              console.log('NO FILE FOUND!');
-
-            }
-            console.log('...done');
-        }
-
-        mobileInput.addEventListener('change', function() {
-            console.log('mobile file changed');
-            readURL(this);
-        });
-
-        function proceed() {
-          document.querySelector("#step-1").classList.add("d-none");
-          document.querySelector("#step-2").classList.remove("d-none");
-        };
-
-
-    </script>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <!--
