--- a/app/index.html
+++ b/app/index.html
@@ -21,10 +21,6 @@
   </head>
   <body>
 
-    <!--[if IE]>
-      <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
-
     <div class="container">
 
       <!-- header -->
@@ -37,9 +33,18 @@
       <div id="step-1" class="row marketing">
         <div class="col-lg-8">
           <p><button class="btn btn-dark" onclick="window.location.href='index2.html'">HTML Version</button></p>
-          <p><button class="btn btn-dark" disabled onclick="window.location.href=flash.html">Flash Version</button></p>
+          <p><button class="btn btn-dark" onclick="window.location.href='fallback/index.html'">Fallback Version</button></p>
         </div>
       </div>
+
+      <!-- console -->
+      <div class="col-lg-4">
+        <h4 class="text-muted">Console</h4>
+        <div class="jumbotron text-align-left">
+          <pre id="logger"></pre>
+        </div>
+      </div>
+      <!-- /console -->
 
       <div class="row"></div>
       <div class="footer"></div>
@@ -47,21 +52,6 @@
     </div>
 
 
-
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-    <!--
-    <script>
-      (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-      e.src='https://www.google-analytics.com/analytics.js';
-      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-      ga('create','UA-XXXXX-X');ga('send','pageview');
-    </script>
-  -->
-    <!-- build:js scripts/vendor.js -->
-    <!-- endbuild -->
-    <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
     <!-- endbuild -->
   </body>
