new fallback links

--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,9 @@
       <div id="step-1" class="row marketing">
         <div class="col-lg-8">
           <p><button class="btn btn-dark" onclick="window.location.href='index2.html'">HTML Version</button></p>
-          <p><button class="btn btn-dark" onclick="window.location.href='fallback/index.html'">Fallback Version</button></p>
+          <hr/>
+          <p><button class="btn btn-dark" onclick="window.location.href='https://albanbochsler.github.io/webcam/face-detection-demo/index.html'">Fallback Version</button></p>
+          <p><button class="btn btn-dark" onclick="window.location.href='https://albanbochsler.github.io/getUserMedia.js/'">Fallback Version 2</button></p>
         </div>
       </div>
 
